# airbnb

./: .gitignore  pyproject.toml  render.yaml
bookings/: models.py  serializers.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
common/: permissions.py
config/: schema.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py
frontend/: package-lock.json  package.json
frontend/src/: api.ts  calendar.css  index.tsx  router.tsx  types.d.ts
frontend/src/components/: Header.tsx  HostOnlyPage.tsx  LoginModal.tsx  ProtectedPage.tsx  Room.tsx  Root.tsx  SignUpModal.tsx  SocialLogin.tsx
frontend/src/lib/: useUser.ts
frontend/src/routes/: GithubConfirm.tsx  Home.tsx  KakaoConfirm.tsx  (+6 more)
houses/: admin.py  models.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
rooms/: admin.py  models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py
rooms/tests/: test_amenities.py  test_rooms.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
wishlists/: models.py  serializers.py  views.py
wishlists/migrations/: 0001_initial.py
